# Bloit

./: README.md  bloit.cabal
app/: Main.hs
src/: Bloit.hs  Dictionary.hs  EvaluationStack.hs  Frame.hs  FrameSet.hs  ImmutableBytes.hs  Instruction.hs  LocalStore.hs  Object.hs  Reachability.hs  Routine.hs  Story.hs  Type.hs  Utility.hs  Zstring.hs
test/: Spec.hs  UtilitySpec.hs
