name:                bloit
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/bloit#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bloit
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Bloit
                      ,ImmutableBytes
                      ,Story
                      ,Type
                      ,Utility
  build-depends:       base >= 4.7 && < 5
                      ,binary == 0.7.5.0
                      ,bytestring == 0.10.6.0
                      ,containers == 0.5.6.2
                      ,hashtables == 1.2.1.0
                      ,hashable == 1.2.4.0
                      ,template-haskell == 2.10.0.0
