name:                bloit
version:             0.1.0.0
synopsis:            Initial project template from stack, using test-framework with QuickCheck
description:         Please see README.md
homepage:            https://github.com/jessermejia/bloit#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          jesse.r.mejia@gmail.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bloit
                     , Dictionary
                     , ImmutableBytes
                     , Instruction
                     , Object
                     , Story
                     , Type
                     , Utility
                     , Zstring
  build-depends:       base >= 4.7 && < 5
                     , bytestring == 0.10.6.0
                     , containers == 0.5.6.2
                     , template-haskell == 2.10.0.0
  default-language:    Haskell2010

executable bloit-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , bloit
  default-language:    Haskell2010

test-suite bloit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , bloit
                     , HUnit
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  other-modules:       UtilitySpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jessermejia/bloit
